--- a/index2.html
+++ b/index2.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <title>Dámské běžecké boty</title>
         <link rel="stylesheet" type="text/css" href="style.css">
+        <link href="https://fonts.googleapis.com/css?family=Rubik&amp;subset=latin-ext" rel="stylesheet">
     </head>
     <body>
 
@@ -47,12 +48,12 @@
                 <h2 class="parametr">Velikost</h2>
 
                 <ul class="velikosti">
-                    <li>35</li>
-                    <li>36</li>
-                    <li>37</li>
-                    <li class="vybrana">38</li>
-                    <li>39</li>
-                    <li>40</li>
+                    <li><a href="">35</a></li>
+                    <li><a href="">36</a></li>
+                    <li><a href="">37</a></li>
+                    <li><a href="">38</a></li>
+                    <li><a href="">39</a></li>
+                    <li><a href="">40</a></li>
                 </ul>
 
                 <div class="akce">
